<resources>
    <string name="app_name">Fuel List</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="month_january">Январь</string>
    <string name="month_february">Февраль</string>
    <string name="month_march">Март</string>
    <string name="month_april">Апрель</string>
    <string name="month_may">Май</string>
    <string name="month_june">Июнь</string>
    <string name="month_july">Июль</string>
    <string name="month_august">Август</string>
    <string name="month_september">Сентябрь</string>
    <string name="month_october">Октябрь</string>
    <string name="month_november">Ноябрь</string>
    <string name="month_december">Декабрь</string>
    <string name="month">Месяц</string>\
    <string name="endMil">Введите пробег на конец месяца:</string>
    <string name="mileagePeriod">Пробег</string>
    <string name="remaining">Остакток в баке на начало месяца</string>
    <string name="remainingEnd">Остакток в баке на конец месяца</string>
    <string name="endLiters">Введите остаток в баке на конец мсяца:</string>
    <string name="allFields">Все поля должны быть заполнены</string>
    <string name="notEmpty">Поле не может быть пустым </string>
    <string name="mileageStart">Начало месяца: </string>
    <string name="mileageEnd">Конец месяца </string>
    <string name="remainderInBox">Остакток в баке </string>
    <string name="refueledLiters">Заправлено </string>
    <string name="consumption">Расход </string>
    <string name="ok">OK</string>
    <string name="attention">Внимание!</string>
    <string name="attention_message">Перед началом нового месяца, заполните данные предыдущего:\n\n*Пробег на конец месяца\n*Остакток в баке </string>
    <string name="list_of_gas_stations">Список заправок:</string>





</resources>